# HolyC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: grammar.ebnf  style.css
src/ast/: AST.h  ASTPrinter.cpp  ASTPrinter.h  TranslationUnit.h  Types.h
src/codegen/: AOTCompiler.cpp  AOTCompiler.h  JIT.cpp  JIT.h  LLVMCodegen.cpp  LLVMCodegen.h
src/driver/: Formatter.cpp  Formatter.h  JITCache.cpp  JITCache.h  main.cpp
src/interpreter/: Heap.h  Interpreter.cpp  Interpreter.h  SmallStr.h  Value.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h  TokenKind.h
src/lsp/: LSPServer.cpp  LSPServer.h
src/parser/: Parser.cpp  Parser.h
src/preprocessor/: CHeaderImport.cpp  CHeaderImport.h  MacroTable.h  Preprocessor.cpp  Preprocessor.h
src/runtime/: holyc_rt.cpp  holyc_rt.h
src/sema/: Env.h  Sema.cpp  Sema.h
src/support/: Arena.h  Diagnostics.cpp  Diagnostics.h  SourceLocation.h  SourceManager.cpp  SourceManager.h  StringRef.h
stdlib/: defs.HH  hashmap.HC  list.HC  math.HC  queue.HC  regex.HC  set.HC  sort.HC  stack.HC  string_extra.HC  strings.HC  tree.HC  vector.HC
tests/: demo.HC  demo.expected  run_tests.sh
tests/arrays/: init_list.HC  multidim.HC
tests/asm/: basic_asm.HC  constrained_asm.HC  nop_interp.HC  rdtsc_interp.HC
tests/bench/: fib40.HC  fib40.expected  sort.HC  sort.expected
tests/builtins/: argv.HC  bit_funcs.HC  bit_funcs.expected  bit_ops.HC  bit_ops.expected  char_class.HC  char_class.expected  char_funcs.HC  char_funcs.expected  date_time.HC  date_time.expected  dir_ops.HC  math_ext.HC  math_ext.expected  math_funcs.HC  math_funcs.expected  memory_funcs.HC  sprint.HC  str_new.HC  str_ops.HC  str_ops.expected  str_upr_lwr.HC  string_funcs.HC  string_funcs.expected
tests/class/: anon_union.HC  basic_method.HC  bitfields.HC  bitfields.expected  deep_inherit.HC  implicit_this.HC  inheritance.HC  inherited_methods.HC  memcpy_struct.HC  method_override.HC  parent_call.HC  partial_struct_init.HC  public_field.HC  struct_init.HC  this_pointer.HC  zero_init_aot.HC
tests/compat/: COMPAT.md  bit_ops.HC  bit_ops.expected  linked_list.HC  matrix.HC  prime_sieve.HC  sort_merge.HC  sort_merge.expected
tests/debug/: gdb_smoke.sh  test_debug_flag.sh
tests/defaults/: basic_defaults.HC  basic_defaults.expected
tests/e2e/: case_range.HC  case_range.expected  class_methods_full.HC  class_methods_full.expected  enum_basic.HC  enum_basic.expected  goto_labels.HC  goto_labels.expected  lock_block.HC  nested_structs.HC  nested_structs.expected  operators.HC  operators.expected  recursion.HC  recursion.expected  string_concat.HC  string_concat.expected  switch_enum.HC  switch_fallthrough.HC  switch_fallthrough.expected
tests/exception/: basic_try_catch.HC  basic_try_catch.expected  nested_try.HC  nested_try.expected  throw_across_calls.HC  throw_across_calls.expected
tests/formatter/: blank_lines.HC  blank_lines.expected  define_cont.HC  define_cont.expected  indent.HC  indent.expected  multi_blank.HC  multi_blank.expected  spacing.HC  spacing.expected  trailing_comment.HC  trailing_comment.expected
tests/funcptr/: basic_funcptr.HC  callback.HC
tests/interop/: c_stdio.HC  shared_lib.HC
tests/interpreter/: exe_pp_test.HC  exe_pp_test.expected  exe_test.HC  exe_test.expected  fib.HC  fib.expected  goto_loop.HC  hello.HC  hello.expected  test_interpreter.cpp
tests/intrinsic/: basic_union.HC  basic_union.expected  byte_access.HC  byte_access.expected
tests/io/: file_exists.HC  write_read.HC
tests/lastclass/: basic.HC  multiple.HC
tests/lexer/: hello.HC  test_lexer.cpp
tests/lsp/: basic.sh  semantic_tokens.sh  test_lsp.py
tests/parser/: test_parser.cpp
tests/pointer/: deep_ptr.HC  func_ptr.HC  multidim_array.HC  postfix_cast_class.HC  ptr_arithmetic.HC  ptr_arithmetic.expected  ptr_compare.HC  ptr_compare.expected  ptr_subtract.HC  struct_ptr_cast.HC  triple_deref.HC
tests/preprocessor/: assert_pass.HC  file_line.HC  funcmacro.HC  funcmacro.expected  if_arithmetic.HC  if_arithmetic.expected  if_defined.HC  if_defined.expected  if_expr.HC  stringify.HC  test_preprocessor.cpp  token_paste.HC  variadic_macro.HC
tests/print/: binary_format.HC  binary_format.expected  engineering_format.HC  engineering_format.expected  enum_format.HC  repeat_format.HC  repeat_format.expected
tests/sema/: range_diag.HC
tests/static/: static_locals.HC
tests/stdlib/: defs.HC  hashmap.HC  hashmap.expected  list.HC  list.expected  math.HC  math.expected  math_ext.HC  math_ext.expected  queue.HC  queue.expected  regex.HC  set.HC  sort.HC  stack.HC  stack.expected  strfmt.HC  strfmt.expected  string_extra.HC  string_extra.expected  strings_ext.HC  strings_ext.expected  tree.HC  tree.expected  vector.HC  vector.expected
tests/types/: adjacent_strings.HC  adjacent_strings.expected  f32_basic.HC  multivar.HC  multivar.expected  reg_var.HC  typeof_basic.HC  typeof_basic.expected
tests/varargs/: basic_varargs.HC  three_dot.HC  user_varargs.HC
tools/: holyc_gdb.py
website/: docs.html  index.html
